[package]
name = "spm-helper"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0"
description = "A program that helps you make .spm packages"
homepage = "https://sovietlinux.ml/"
documentation = "https://docs.sovietlinux.ml/repo"
repository = "https://github.com/Soviet-Linux/spm-helper"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10.1"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
